# handlers/http_handlers/user_handler.go
@@ -99,6 +99,7 @@ func (u *userHandler) LoginUser(ctx *gin.Context) {
 //	@Produce		json
 //	@Param			user	body		dto.UpdateUserRequest	true	"Update a user request body"
 //	@Success		200		{object}	dto.UpdateUserResponse
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add your access token here>)
 //	@Failure		401		{object}	errs.MessageErrData
 //	@Failure		422		{object}	errs.MessageErrData
 //	@Failure		400		{object}	errs.MessageErrData
@@ -140,6 +141,7 @@ func (u *userHandler) UpdateUser(ctx *gin.Context) {
 //	@Tags			users
 //	@Produce		json
 //	@Success		200		{object}	dto.DeleteUserResponse
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add your access token here>)
 //	@Failure		401		{object}	errs.MessageErrData
 //	@Router			/users/delete-account [delete]
 func (u *userHandler) DeleteUser(ctx *gin.Context) {
